cambios en el archivo

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
                     <p class="nosotros__titulo">Sobre mi</p>
                     <p class="nosotros__texto">Vivo en Buenos Aires, Argentina. Trato de ver siempre el lado positivo. Si hay comunicación, hay garantía de crecimiento.</p>
                     <div class="nosotros__redes">
-                        <a target="_blank"  href="https://twitter.com/nicotraczuk" class="nosotros__icono"><img src="build/img/icono-twitter.svg" alt=""></a>
-                        <a target="_blank" href="https://www.instagram.com/nico.traczuk/" class="nosotros__icono"><img src="build/img/icono-instagram.svg" alt=""></a>
-                        <a target="_blank" href="https://www.linkedin.com/in/nicol%C3%A1s-traczuk-639a76256/" class="nosotros__icono"><img src="build/img/icono-linkedin.svg" alt=""></a>
+                        <a target="_blank"  href="https://twitter.com/nicotraczuk" class="nosotros__icono"><img src="build/img/icono-twitter.svg" alt="icono twitter"></a>
+                        <a target="_blank" href="https://www.instagram.com/nico.traczuk/" class="nosotros__icono"><img src="build/img/icono-instagram.svg" alt="icono instagram"></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/nicol%C3%A1s-traczuk-639a76256/" class="nosotros__icono"><img src="build/img/icono-linkedin.svg" alt="icono linkedin"></a>
+                        <a target="_blank" href="https://github.com/Nico-Traczuk?tab=repositories" class="nosotros__icono" ><img src="build/img/icono-github3.svg" alt="icono github"></a>
                     </div>
                 </div>
             </figure>
@@ -84,9 +85,9 @@
             <input class="contacto__input" id="email" name="email" type="email">
             <br>
             <label class="contacto__label" for="mensaje">Mensaje:</label>
-            <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
+            <textarea class="contacto__text" name="mensaje" id="mensaje" cols="10" rows="10"></textarea>
             <br>
-            <input class="contacto__input" type="submit" value="Enviar">
+            <input class="contacto__submit" id="enviar" type="submit" value="Enviar">
 
         </form>
     </section>
