--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
             <div class="proyecto__dropdown"> <!-- CARD -->
                 <a href="https://proyecto-tienda-guitarras.netlify.app/index.html" class="proyecto__imagen">Proyecto Tienda Guitarras<img src="build/img/open-folder.png" alt="imagen folder"></a>
                 <div class="proyecto__contenido">
-                    <p class="proyecto__item">HTML</p>
-                    <p class="proyecto__item">CSS</p>
-                    <p class="proyecto__item">SCSS</p>
+                    <p class="proyecto__item">- HTML -</p>
+                    <p class="proyecto__item">- CSS -</p>
+                    <p class="proyecto__item">- SCSS -</p>
                 </div>
             </div>
             <div class="proyecto__dropdown"> <!-- CARD -->
                 <a href="https://proyecto-cotizador-seguros.netlify.app/" class="proyecto__imagen">Proyecto Cotizador de seguros<img src="build/img/open-folder.png" alt="imagen folder"></a>
                 <div class="proyecto__contenido">
-                    <p class="proyecto__item">HTML</p>
-                    <p class="proyecto__item">CSS</p>
-                    <p class="proyecto__item">Tailwind</p>
-                    <p class="proyecto__item">Javascript</p>
+                    <p class="proyecto__item">- HTML -</p>
+                    <p class="proyecto__item">- CSS -</p>
+                    <p class="proyecto__item">- Tailwind -</p>
+                    <p class="proyecto__item">- Javascript -</p>
                 </div>
             </div>
             <div class="proyecto__dropdown"> <!-- CARD -->
                 <a href="https://proyecto-tweeter-localstorage.netlify.app/" class="proyecto__imagen">Proyecto Con local storage<img src="build/img/open-folder.png" alt="imagen folder"></a>
                 <div class="proyecto__contenido">
-                    <p class="proyecto__item">HTML</p>
-                    <p class="proyecto__item">CSS</p>
-                    <p class="proyecto__item">Tailwind</p>
-                    <p class="proyecto__item">Javascript</p>
-                    <p class="proyecto__item">Local Storage</p>
+                    <p class="proyecto__item">- HTML -</p>
+                    <p class="proyecto__item">- CSS -</p>
+                    <p class="proyecto__item">- Tailwind -</p>
+                    <p class="proyecto__item">- Javascript -</p>
+                    <p class="proyecto__item">- Local Storage -</p>
                 </div>
             </div>
         </div>
